# keystone

./: .gitmodules  PATCH_align_kernel_config_for_mod.txt  PATCH_freedomusdk_missing_stack_guard.txt  source.sh
linux-keystone-driver/: keystone-ioctl.c  keystone-page.c  keystone.c
runtime/call/: io_wrap.c  net_wrap.c  syscall.c
runtime/include/call/: net_wrap.h  syscall.h
runtime/include/mm/: common.h
runtime/mm/: freemem.c  page_swap.c
runtime/sys/: boot.c
sdk/examples/: CMakeLists.txt
sdk/examples/attestation/eapp/: attestor.c
sdk/examples/getcwd/: CMakeLists.txt
sdk/examples/getcwd/eapp/: eapp_getcwd.c
sdk/examples/getpeername/: CMakeLists.txt
sdk/examples/getpeername/eapp/: eapp_getpeername.c
sdk/examples/hello-native/eapp/: eapp_native.c
sdk/examples/hello-native/host/: host_native.cpp
sdk/examples/hello/eapp/: hello.c
sdk/include/edge/: edge_syscall.h
sdk/include/host/: Params.hpp
sdk/src/edge/: edge_call.c  edge_syscall.c
sdk/src/host/: Enclave.cpp  Memory.cpp  elf.c
